# repo2prompt

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PUBLISHING.md  README.md  output.xml
examples/: basic_usage.rs  custom_filtering.rs  json_output.rs  programmatic_processing.rs
src/: lib.rs  main.rs  tests.rs
